--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -23,6 +23,10 @@ builds:
       - -trimpath
     ldflags:
       - -s -w -X github.com/thobianchi/examplecli/cmd.version={{.Version}} -X github.com/thobianchi/examplecli/cmd.commit={{.Commit}} -X github.com/thobianchi/examplecli/cmd.date={{.Date}}
+signs:
+  - artifacts: checksum
+    args: ["--batch", "-u", "<key id, fingerprint, email, ...>", "--output", "${signature}", "--detach-sign", "${artifact}"]
+
 archives:
   - name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
     replacements:
