--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,8 +24,7 @@ builds:
     ldflags:
       - -s -w -X github.com/thobianchi/examplecli/cmd.version={{.Version}} -X github.com/thobianchi/examplecli/cmd.commit={{.Commit}} -X github.com/thobianchi/examplecli/cmd.date={{.Date}}
 signs:
-  - artifacts: checksum
-    args: ["--batch", "-u", "<key id, fingerprint, email, ...>", "--output", "${signature}", "--detach-sign", "${artifact}"]
+  - artifacts: none
 
 archives:
   - name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
